--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <version>3.7.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
